--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".data.MainActivity"
+            android:label="@string/title_activity_main"
+            android:parentActivityName=".ui.login.LoginActivity"></activity>
+        <activity
             android:name=".data.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:parentActivityName=".ui.login.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:parentActivityName=".data.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
