--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".data.MyMeds"
+            android:label="@string/title_activity_my_meds"
+            android:parentActivityName=".data.MainActivity"
+        android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".data.MainActivity"
             android:label="@string/title_activity_main"
-            android:parentActivityName=".ui.login.LoginActivity"></activity>
+            android:parentActivityName=".ui.login.LoginActivity" />
         <activity
             android:name=".data.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
