--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".data.AddMeds"
+            android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".data.MyMeds" />
 
         <activity android:name=".data.MedDetail" />
